# macleanup

./: .gitignore  .pnp.cjs  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MACLEANUP_portfolio-info_2026-06-26.md  NOTICE  README.md  SECURITY.md  mac-cleanup.sh  package.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: desktop-release.yml
desktop/: .gitignore  README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
desktop/firebase/: firestore.rules
desktop/scripts/: gen-icons.mjs  sync-script.mjs
desktop/src/: App.tsx  config.ts  main.tsx  styles.css  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: AccountBar.tsx  ConfirmDialog.tsx  Home.tsx  LogPanel.tsx  Logo.tsx  ResultCard.tsx  RunView.tsx  SectionList.tsx  SectionsPage.tsx  Settings.tsx  SignInGate.tsx  Spinner.tsx  UpdateGate.tsx
desktop/src/hooks/: useRun.ts  useSettings.ts
desktop/src/lib/: auth.ts  cli.ts  entitlement.ts  format.ts  (+3 more)
docs/: README.md  author.md  cli-reference.md  examples-cookbook.md  faq.md  getting-started.md  installation.md  profiles.md  recovery-guide.md  reports-and-logs.md  safety-model.md  sections.md  troubleshooting.md
docs/social-media-content/: community-posts.md  email-pitches-01.md  landing-page.html  linkedin-posts-01.md  twitter-threads-01.md  whatsapp-messages-01.md
