[package]
name = "macleanup"
version = "4.5.1"
description = "macleanup — native, safe-by-default macOS cleanup GUI"
authors = ["Ahsan Mahmood <aoneahsan@gmail.com>"]
license = "SEE LICENSE IN ../../LICENSE.md"
repository = "https://github.com/aoneahsan/macleanup"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Small, fast release binaries (keeps the .app tiny).
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
